deployments/local/minikube/manifests/example-app/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: example-app
  labels:
    app: example-app
spec:
  replicas: 3
  selector:
    matchLabels:
      app: example-app
  template:
    metadata:
      labels:
        app: example-app
    spec:
      containers:
        - name: example-app
          image: ${IMAGE}
          imagePullPolicy: Always
          ports:
            - name: app-port
              containerPort: ${PORT}
          readinessProbe:
            httpGet:
              path: /
              port: app-port
