deployments/local/minikube/manifests/example-app/ingress.yml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: example-app-ingress
  annotations:
    nginx.ingress.kubernetes.io/force-ssl-redirect: "false"
    nginx.ingress.kubernetes.io/ssl-redirect: "false"
spec:
  rules:
  - host: ${NAMESPACE}.minikube.local
    http:
      paths:
      - path: /
        backend:
          serviceName: example-app
          servicePort: 80
